After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736902 - App-folder dialog cannot be closed
App-folder dialog cannot be closed
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-18 13:25 UTC by Florian Müllner
Modified: 2014-09-18 19:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
installed: Add proper return value to ::delete-event handler (1.08 KB, patch)
2014-09-18 13:25 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2014-09-18 13:25:09 UTC
See patch.
Comment 1 Florian Müllner 2014-09-18 13:25:10 UTC
Created attachment 286495 [details] [review]
installed: Add proper return value to ::delete-event handler

GtkWidget::delete-event has a boolean return value to indicate whether
signal emission should continue or be stopped - by avoiding an explicit
return value, the latter happens, making the app-folder dialog impossible
to close.
Comment 2 Kalev Lember 2014-09-18 13:40:14 UTC
Review of attachment 286495 [details] [review]:

Looks good to me, thanks! Just a small spaces vs tabs issue in the patch that would be good to fix before committing.
Comment 3 Florian Müllner 2014-09-18 19:28:13 UTC
Attachment 286495 [details] pushed as 8c1a910 - installed: Add proper return value to ::delete-event handler