installed: Add proper return value to ::delete-event handler

GtkWidget::delete-event has a boolean return value to indicate whether
signal emission should continue or be stopped - by avoiding an explicit
return value, the latter may happen, making the app-folder dialog
impossible to close.

https://bugzilla.gnome.org/show_bug.cgi?id=736902